--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "test422": "^1.0.2"
+
   },
   "scripts": {
     "start": "react-scripts start",
