--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -9,22 +8,22 @@
     "@testing-library/user-event": "^7.2.1",
     "apiai": "^4.0.3",
     "dialogflow": "^1.1.1",
+    "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "test422": "^1.0.2"
-
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "web":"react-scripts start"
+    "web": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
