--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^5.8.9",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "test422": "^1.0.2"
+    "test422": "^1.0.2",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
