--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js", 
+    "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
@@ -15,12 +15,15 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
+    "cookie-parser": "^1.4.4",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.8.9",
+    "nodemon": "^2.0.2",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "test422": "^1.0.2",
-    "nodemon": "^2.0.2"
+    "test422": "^1.0.2"
   }
 }
