--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "http-proxy-middleware": "^0.20.0",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
